feat : question page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="./quiz-css/grid-layout.css">
     <title>StormIZ</title>
 </head>
+
 <body>
     <div class="quiz-container">
         <nav>
@@ -28,14 +30,12 @@
             <div class="quiz-item">
                 <div class="card-container product-card card-shadow">
                     <div class="quiz-img">
-                        <img class="card-img"
-                            src="https://flxt.tmsimg.com/assets/p8630071_b_h8_bc.jpg"
-                            alt="..." />
+                        <img class="card-img" src="https://flxt.tmsimg.com/assets/p8630071_b_h8_bc.jpg" alt="..." />
                     </div>
-                    <h1 class="card-subtitle">I dont play the odd's, I play the man</h1>
+                    <h1 class="card-subtitle">I don't play the odds, I play the man</h1>
                     <h2 class="card-title">Take this quiz to test yourself!</h2>
-                    <p class="card-description">5 Questions <span class="take-quiz">Take Quiz <i class="fas fa-chevron-right"></i></span>
-                    </p>
+                    <p class="card-description">5 Questions <a href="./topic-one-questions/questions.html"><span class="take-quiz">Take Quiz <i
+                                    class="fas fa-chevron-right"></i></span></a></p>
                 </div>
                 <div class="card-container product-card card-shadow">
                     <div class="quiz-img">
@@ -45,12 +45,13 @@
                     </div>
                     <h1 class="card-subtitle">Bazzinga!</h1>
                     <h2 class="card-title">Take this quiz to test yourself!</h2>
-                    <p class="card-description">5 Questions <span class="take-quiz">Take Quiz <i
-                                class="fas fa-chevron-right"></i></span>
+                    <p class="card-description">5 Questions <a href=""><span class="take-quiz">Take Quiz <i
+                                    class="fas fa-chevron-right"></i></span></a></p>
                 </div>
             </div>
         </section>
     </div>
     <script src="./quiz-js/theme.js"></script>
 </body>
+
 </html>
