feat : category name

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <section>
             <h1 class="title"><i class="fas fa-bolt"></i> StormIZ</h1>
             <h2 class="subtitle">A Quiz App</h2>
+            <h2 class="category-title">Tv Shows Quiz :</h2>
             <div class="quiz-item">
                 <div class="card-container product-card card-shadow">
                     <div class="quiz-img">
