feat : take quiz button added in rule

--- a/rule-page/rule.html
+++ b/rule-page/rule.html
@@ -33,6 +33,7 @@
                 <h2 class="rule">3. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro totam quibusdam sapiente maxime quos, nihil eius sint ut beatae vero!</h2>
                 <h2 class="rule">4. Lorem ipsum dolor sit amet.</h2>
                 <h2 class="rule">5. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aperiam ut soluta quibusdam enim exercitationem!</h2>
+                <a href=""><span class="take-quiz">Take Quiz <i class="fas fa-chevron-right"></i></a>
             </div>
         </section>
     </div>
