refactor : connected each page with each other

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                     </div>
                     <h1 class="card-subtitle">I dont play the odd's, I play the man.</h1>
                     <h2 class="card-title">Take this quiz to test yourself!</h2>
-                    <p class="card-description">5 Questions <span class="take-quiz">Take Quiz <i class="fas fa-chevron-right"></i></span>
+                    <p class="card-description">5 Questions <a href="./rule-page/rule.html"><span class="take-quiz">Take Quiz <i
+                                    class="fas fa-chevron-right"></i></span></a>
                     </p>
                 </div>
                 <div class="card-container product-card card-shadow">
@@ -46,8 +47,8 @@
                     </div>
                     <h1 class="card-subtitle">Bazzinga!</h1>
                     <h2 class="card-title">Take this quiz to test yourself!</h2>
-                    <p class="card-description">5 Questions <span class="take-quiz">Take Quiz <i
-                                class="fas fa-chevron-right"></i></span>
+                    <p class="card-description">5 Questions <a href="./rule-page/rule.html"><span class="take-quiz">Take
+                                Quiz <i class="fas fa-chevron-right"></i></span></a>
                 </div>
             </div>
             <h2 class="category-title">Movie Quiz :</h2>
@@ -60,8 +61,8 @@
                     </div>
                     <h1 class="card-subtitle">Whatever it takes</h1>
                     <h2 class="card-title">Take this quiz to test yourself!</h2>
-                    <p class="card-description">5 Questions <span class="take-quiz">Take Quiz <i
-                                class="fas fa-chevron-right"></i></span>
+                    <p class="card-description">5 Questions <a href="./rule-page/rule.html"><span class="take-quiz">Take
+                                Quiz <i class="fas fa-chevron-right"></i></span></a>
                     </p>
                 </div>
                 <div class="card-container product-card card-shadow">
@@ -72,8 +73,8 @@
                     </div>
                     <h1 class="card-subtitle">No lanterns, No kryptonians. This world will Fall.</h1>
                     <h2 class="card-title">Take this quiz to test yourself!</h2>
-                    <p class="card-description">5 Questions <span class="take-quiz">Take Quiz <i
-                                class="fas fa-chevron-right"></i></span>
+                    <p class="card-description">5 Questions <a href="./rule-page/rule.html"><span class="take-quiz">Take
+                                Quiz <i class="fas fa-chevron-right"></i></span></a>
                 </div>
             </div>
         </section>
