--- a/result-page/result.html
+++ b/result-page/result.html
@@ -49,6 +49,8 @@
                 <p class="answers card-shadow correct">Reginald</p>
                 <p class="answers card-shadow wrong">Brandon</p>
             </div>
+            <a href="../index.html"><span class="take-quiz">Back Home <i
+                        class="fas fa-chevron-right"></i></a>
         </section>
     </div>
     <script src="../quiz-js/theme.js"></script>
