--- a/topic-one-questions/questions.html
+++ b/topic-one-questions/questions.html
@@ -60,6 +60,8 @@
                     <p class="answers card-shadow">Reginald</p>
                     <p class="answers card-shadow wrong">Brandon</p>
                 </div>
+                <a href="../result-page/result.html"><span class="take-quiz">See Result <i
+                            class="fas fa-chevron-right"></i></a>
         </section>
     </div>
     <script src="../quiz-js/theme.js"></script>
