refactor : wrote alt for images, added href

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <body>
     <div class="quiz-container">
       <nav>
-        <a href="">
+        <a href="https://twitter.com/TheBestDhruv">
           <i class="theme fab fa-twitter"></i>
         </a>
-        <a href="">
+        <a href="https://github.com/b0llu/StormIZ/tree/developer">
           <i class="theme fab fa-github"></i>
         </a>
         <i id="toggle-theme" class="theme fas fa-moon"></i>
@@ -34,8 +34,16 @@
         <h2 class="subtitle">A Quiz App</h2>
         <h2 class="category-subtitle">Select a Category</h2>
         <div class="category-selector">
-          <a class="category-title card-shadow" href="./category-page/category-topic-one.html">Tv Show Quiz</a>
-          <a class="category-title card-shadow" href="./category-page/category-topic-two.html">Movie Quiz</a>
+          <a
+            class="category-title card-shadow"
+            href="./category-page/category-topic-one.html"
+            >Tv Show Quiz</a
+          >
+          <a
+            class="category-title card-shadow"
+            href="./category-page/category-topic-two.html"
+            >Movie Quiz</a
+          >
         </div>
       </section>
     </div>
