--- a/category-page/category-topic-one.html
+++ b/category-page/category-topic-one.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../landing.css" />
-    <link rel="stylesheet" href="./category.css">
+    <link rel="stylesheet" href="./category.css" />
     <link
       rel="stylesheet"
       href="https://storm-components.netlify.app/components.css"
@@ -22,10 +22,10 @@
   <body>
     <div class="quiz-container">
       <nav>
-        <a href="">
+        <a href="https://twitter.com/TheBestDhruv">
           <i class="theme fab fa-twitter"></i>
         </a>
-        <a href="">
+        <a href="https://github.com/b0llu/StormIZ/tree/developer">
           <i class="theme fab fa-github"></i>
         </a>
         <i id="toggle-theme" class="theme fas fa-moon"></i>
