--- a/topic-one-questions/questions.html
+++ b/topic-one-questions/questions.html
@@ -17,10 +17,10 @@
 <body>
     <div class="quiz-container">
         <nav>
-            <a href="">
+            <a href="https://twitter.com/TheBestDhruv">
                 <i class=" theme fab fa-twitter"></i>
             </a>
-            <a href="">
+            <a href="https://github.com/b0llu/StormIZ/tree/developer">
                 <i class=" theme fab fa-github"></i>
             </a>
             <i id="toggle-theme" class=" theme fas fa-moon"></i>
